--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.2
-	yarn_mappings=1.16.2+build.47
-	loader_version=0.11.1
+	minecraft_version=1.19.2
+	loader_version=0.14.8
 
 # Mod Properties
-	mod_version = 1.0
-	maven_group = me.jaackson
-	archives_base_name = spu
-
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.29.4+1.16
+	mod_version = 2.0.0
+	maven_group = dev.jaackson
+	archives_base_name = server-pack-unlocker
